# elixir-solana-app

./: .gitignore  README.md  mix.exs
.github/workflows/: ci.yml
lib/: nif_sol.ex
lib/nif_sol/: native.ex
native/sol/: Cargo.toml
native/sol/src/: lib.rs  mint.rs
