[package]
name = "sol"
version = "0.1.0"
authors = ["Peroni <peronif5@gmail.com>"]
edition = "2018"

[lib]
name = "sol"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.25.0"
bufstream = "0.1.4"
borsh = "0.9.3"
anyhow = "1.0.65"
rust-base58 = "0.0.4"
anchor-lang = "0.24.2"
mpl-candy-machine = "4.4.1"
anchor-client = "^0.24.2"

